# gourgeist

./: .gitignore  Cargo.toml  Readme.md  artifacts.json  benchmark.sh  changelog.rss  compare_in_git.sh  gourgeist-installer.ps1.txt  gourgeist-installer.sh.txt  index.html
.github/workflows/: test.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.0.3/: index.html
changelog/v0.0.4/: index.html
src/: bare.rs  interpreter.rs  lib.rs  main.rs  packages.rs  virtualenv_cache.rs
