[package]
name = "virtualenv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.4.4", features = ["derive"] }
configparser = "3.0.2"
dirs = "5.0.1"
fs-err = "2.9.0"
install-wheel-rs = { git = "https://github.com/konstin/poc-monotrail", optional = true }
minreq = { version = "2.10.0", optional = true, features = ["https"] }
rayon = { version = "1.8.0", optional = true }
seahash = "4.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = ["install"]
install = ["install-wheel-rs", "minreq"]
parallel = ["rayon"]

# zip implementation
[profile.dev.package.adler]
opt-level = 3
